err/pyjip.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jip'...
Listing './lib/python3.5/site-packages/jip/cli'...
Compiling './lib/python3.5/site-packages/jip/cli/__init__.py'...
***   File "./lib/python3.5/site-packages/jip/cli/__init__.py", line 181
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jip/cli/jip_archive.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_archive.py", line 38
    print "%d archived" % job.id
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jip/cli/jip_bash.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_bash.py", line 143
    print colorize("Skipping %s" % exe.name, YELLOW)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_clean.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_clean.py", line 39
    print colorize("Neither --logs nor --data selected."
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_edit.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_edit.py", line 41
    print colorize("Job updated", GREEN)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_hold.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_hold.py", line 34
    print "Hold", j.id
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jip/cli/jip_jobs.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_jobs.py", line 407
    print "\t".join([str(headers[column](job))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_logs.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_logs.py", line 37
    print __doc__.strip("\n")
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_pipe.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_pipe.py", line 136
    print colorize("Skipping %s" % exe.name, YELLOW)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_profiles.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_profiles.py", line 19
    print "Profile:", colorize(name, BLUE)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_restart.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_restart.py", line 105
    print "Submitted %s with remote id %s" % (exe.job.id,
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_run.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_run.py", line 46
    except LookupError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_specs.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_specs.py", line 150
    except LookupError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_submit.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_submit.py", line 74
    except LookupError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jip/cli/jip_tools.py'...
***   File "./lib/python3.5/site-packages/jip/cli/jip_tools.py", line 20
    print "Tools scripts"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jip/db.py'...
***   File "./lib/python3.5/site-packages/jip/db.py", line 449
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jip/scripts'...
Compiling './lib/python3.5/site-packages/jip/tools.py'...
***   File "./lib/python3.5/site-packages/jip/tools.py", line 595
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jip/vendor'...
Compiling './lib/python3.5/site-packages/jip/vendor/texttable.py'...
***   File "./lib/python3.5/site-packages/jip/vendor/texttable.py", line 204
    raise ArraySizeError, "array should contain 4 characters"
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyjip-0.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './share'...
Listing './share/python-wheels'...
